--- a/map-app/src/index.css
+++ b/map-app/src/index.css
@@ -12,6 +12,22 @@ code {
     monospace;
 }
 
+body {
+  margin: 0;
+}
+
+.map-overlay {
+  position: absolute;
+  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.7);
+  left: 0;
+  right: 0;
+  padding: 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 #map {
-  min-height: 100vh ;
+  height: 100vh;
 }
